apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-workflow-controller
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: argo-workflows
      app.kubernetes.io/component: workflow-controller
  ingress:
    - ports:
        - port: metrics
      from:
        # Allow from prometheus
        - namespaceSelector:
            matchLabels:
              name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
